--- a/modules/commission/locale/fr_FR.po
+++ b/modules/commission/locale/fr_FR.po
@@ -46,10 +46,6 @@ msgctxt "field:broker,id:"
 msgid "ID"
 msgstr " "
 
-msgctxt "field:broker,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:broker,party:"
 msgid "Party"
 msgstr "Acteur"
@@ -138,10 +134,6 @@ msgctxt "field:commission.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:commission.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:commission.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
@@ -218,10 +210,6 @@ msgctxt "field:contract.invoice.commission,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.invoice.commission,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:contract.invoice.commission,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -286,10 +274,6 @@ msgctxt "field:contract.option-commission.option,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.option-commission.option,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:contract.option-commission.option,option:"
 msgid "Subscribed Option"
 msgstr "Garantie Souscrite"
@@ -345,10 +329,6 @@ msgstr "Créé par"
 msgctxt "field:contract.premium.commission,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:contract.premium.commission,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:contract.premium.commission,party:"
 msgid "Party"
@@ -425,10 +405,6 @@ msgstr "Réseau de Distribution"
 msgctxt "field:distribution.network-broker,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:distribution.network-broker,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:distribution.network-broker,rec_name:"
 msgid "Name"
@@ -509,6 +485,10 @@ msgstr "Courtier"
 msgctxt "field:party.party,is_broker:"
 msgid "Broker"
 msgstr "Courtier"
+
+msgctxt "field:party.party,synthesis_rec_name:"
+msgid "Name"
+msgstr "Nom"
 
 msgctxt "model:broker,name:"
 msgid "Broker"
