--- a/modules/table/locale/fr_FR.po
+++ b/modules/table/locale/fr_FR.po
@@ -210,10 +210,6 @@ msgctxt "field:table,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:table,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:table,name:"
 msgid "Name"
 msgstr "Nom"
@@ -269,10 +265,6 @@ msgstr "Créé par"
 msgctxt "field:table.2d,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:table.2d,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:table.2d,rec_name:"
 msgid "Name"
@@ -366,10 +358,6 @@ msgctxt "field:table.2d.open.ask_dimensions,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:table.2d.open.ask_dimensions,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:table.cell,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
@@ -429,10 +417,6 @@ msgstr ""
 msgctxt "field:table.cell,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:table.cell,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:table.cell,rec_name:"
 msgid "Name"
@@ -494,10 +478,6 @@ msgctxt "field:table.dimension.value,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:table.dimension.value,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:table.dimension.value,name:"
 msgid "Name"
 msgstr "Nom"
@@ -542,10 +522,6 @@ msgctxt "field:table.dimension.value.open.ask_type,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:table.dimension.value.open.ask_type,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:table.dimension.value.open.ask_type,table:"
 msgid "Table"
 msgstr "Table"
@@ -583,11 +559,11 @@ msgid "Cells"
 msgstr "Cellules"
 
 msgctxt "model:ir.action,name:act_definition_dimension_form"
-msgid "Dimension Value"
+msgid "Definition Dimension"
 msgstr ""
 
 msgctxt "model:ir.action,name:act_dimension_value_open"
-msgid "Define Dimension Value"
+msgid "Definition Dimension"
 msgstr ""
 
 msgctxt "model:ir.action,name:act_table_2d_open"
