--- a/modules/account_payment_sepa_contract/locale/fr_FR.po
+++ b/modules/account_payment_sepa_contract/locale/fr_FR.po
@@ -2,6 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "field:account.invoice,sepa_mandate:"
+msgid "Sepa Mandate"
+msgstr "Mandat SEPA"
+
 msgctxt "field:contract.billing_information,sepa_mandate:"
 msgid "Sepa Mandate"
 msgstr "Mandat SEPA"
