--- a/modules/offered_insurance/locale/fr_FR.po
+++ b/modules/offered_insurance/locale/fr_FR.po
@@ -113,6 +113,54 @@ msgctxt "field:account.tax.description.version,apply_at_pricing_time:"
 msgid "Apply when Pricing"
 msgstr "Appliquer lors de la Tarification"
 
+msgctxt "field:billing.premium.date_configuration,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:billing.premium.date_configuration,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:billing.premium.date_configuration,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:billing.premium.date_configuration,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:billing.premium.date_configuration,product:"
+msgid "Product"
+msgstr "Produit"
+
+msgctxt "field:billing.premium.date_configuration,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:billing.premium.date_configuration,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:billing.premium.date_configuration,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:billing.premium.date_configuration,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
+msgctxt "field:billing.premium.date_configuration,yearly_custom_date:"
+msgid "Yearly, this day"
+msgstr "Annuellement, à cette date"
+
+msgctxt "field:billing.premium.date_configuration,yearly_on_new_eve:"
+msgid "Every first day of the year"
+msgstr "Chaque 1er janvier"
+
+msgctxt "field:billing.premium.date_configuration,yearly_on_start_date:"
+msgid "Yearly from the contract start"
+msgstr "Annuellement, à la date d'effet du contrat"
+
 msgctxt "field:billing.premium.rule,basic_price:"
 msgid "Amount"
 msgstr "Montant"
@@ -156,10 +204,6 @@ msgstr "ID"
 msgctxt "field:billing.premium.rule,match_contract_frequency:"
 msgid "Match Contract Frequency"
 msgstr "Synchroniser avec la fréquence du contrat"
-
-msgctxt "field:billing.premium.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:billing.premium.rule,offered:"
 msgid "Offered"
@@ -253,10 +297,6 @@ msgctxt "field:billing.premium.rule.component,kind:"
 msgid "Line kind"
 msgstr "Type"
 
-msgctxt "field:billing.premium.rule.component,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:billing.premium.rule.component,premium_rule:"
 msgid "Premium Rule"
 msgstr "Règle de Cotisation"
@@ -349,10 +389,6 @@ msgctxt "field:document.create.attach,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:document.create.attach,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:document.create.attach,name:"
 msgid "Filename"
 msgstr "Nom du Fichier"
@@ -377,10 +413,6 @@ msgctxt "field:document.create.preview,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:document.create.preview,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:document.create.preview,party:"
 msgid "Party"
 msgstr "Acteur"
@@ -397,10 +429,6 @@ msgctxt "field:document.create.select,models:"
 msgid "Models"
 msgstr "Modèles"
 
-msgctxt "field:document.create.select,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:document.create.select,party:"
 msgid "Party"
 msgstr "Acteur"
@@ -412,10 +440,6 @@ msgstr "Modèle de Lettre"
 msgctxt "field:document.create.select.template,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:document.create.select.template,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:document.create.select.template,selected:"
 msgid "Selected"
@@ -444,10 +468,6 @@ msgstr "Date de Fin"
 msgctxt "field:document.description,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:document.description,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:document.description,name:"
 msgid "Name"
@@ -481,10 +501,6 @@ msgctxt "field:document.receive.attach,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:document.receive.attach,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:document.receive.attach,resource:"
 msgid "Resource"
 msgstr "Ressource"
@@ -496,10 +512,6 @@ msgstr "ID"
 msgctxt "field:document.receive.request,kind:"
 msgid "Kind"
 msgstr "Type"
-
-msgctxt "field:document.receive.request,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:document.receive.request,request:"
 msgid "Request"
@@ -516,10 +528,6 @@ msgstr "Documents"
 msgctxt "field:document.receive.set_requests,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:document.receive.set_requests,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:document.request,create_date:"
 msgid "Create Date"
@@ -544,10 +552,6 @@ msgstr "ID"
 msgctxt "field:document.request,is_complete:"
 msgid "Is Complete"
 msgstr "Tout reçu"
-
-msgctxt "field:document.request,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:document.request,needed_by:"
 msgid "Requested for"
@@ -608,10 +612,6 @@ msgstr "Nécessaire Pour"
 msgctxt "field:document.request.line,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:document.request.line,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:document.request.line,rec_name:"
 msgid "Name"
@@ -680,10 +680,6 @@ msgstr "ID"
 msgctxt "field:document.rule,kind:"
 msgid "Kind"
 msgstr "Type"
-
-msgctxt "field:document.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:document.rule,offered:"
 msgid "Offered"
@@ -800,10 +796,6 @@ msgstr "Corps du courrier électronique"
 msgctxt "field:document.template,mail_subject:"
 msgid "eMail Subject"
 msgstr "Sujet du courrier électronique"
-
-msgctxt "field:document.template,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:document.template,name:"
 msgid "Name"
@@ -993,10 +985,6 @@ msgctxt "field:expense.kind,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:expense.kind,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:expense.kind,name:"
 msgid "Name"
 msgstr "Nom"
@@ -1137,6 +1125,10 @@ msgctxt "field:extra_data-sub_extra_data,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
+msgctxt "field:extra_premium.kind,ceiling:"
+msgid "Ceiling"
+msgstr "Plafond"
+
 msgctxt "field:extra_premium.kind,code:"
 msgid "Code"
 msgstr "Code"
@@ -1153,13 +1145,33 @@ msgctxt "field:extra_premium.kind,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
+msgctxt "field:extra_premium.kind,currency:"
+msgid "Currency"
+msgstr "Devise"
+
+msgctxt "field:extra_premium.kind,currency_digits:"
+msgid "Currency Digits"
+msgstr "Précision"
+
+msgctxt "field:extra_premium.kind,currency_symbol:"
+msgid "Currency Symbol"
+msgstr "Symbole de la Devise"
+
 msgctxt "field:extra_premium.kind,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:extra_premium.kind,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
+msgctxt "field:extra_premium.kind,is_discount:"
+msgid "Is Discount"
+msgstr "Est une réduction"
+
+msgctxt "field:extra_premium.kind,max_rate:"
+msgid "Max Rate"
+msgstr "Taux maximum"
+
+msgctxt "field:extra_premium.kind,max_value:"
+msgid "Max Value"
+msgstr "Valeur maximum"
 
 msgctxt "field:extra_premium.kind,name:"
 msgid "Name"
@@ -1196,10 +1208,6 @@ msgstr "Créé par"
 msgctxt "field:insurer,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:insurer,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:insurer,party:"
 msgid "Insurer"
@@ -1301,10 +1309,6 @@ msgctxt "field:offered.business_rule_root,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:offered.business_rule_root,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:offered.business_rule_root,offered:"
 msgid "Offered"
 msgstr "Offre"
@@ -1376,10 +1380,6 @@ msgstr "ID"
 msgctxt "field:offered.coverage_amount.rule,kind:"
 msgid "Kind"
 msgstr "Type"
-
-msgctxt "field:offered.coverage_amount.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:offered.coverage_amount.rule,offered:"
 msgid "Offered"
@@ -1473,10 +1473,6 @@ msgctxt "field:offered.deductible.rule,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:offered.deductible.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:offered.deductible.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
@@ -1557,10 +1553,6 @@ msgctxt "field:offered.deductible.rule.duration,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:offered.deductible.rule.duration,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:offered.deductible.rule.duration,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -1600,10 +1592,6 @@ msgstr "Date de Fin"
 msgctxt "field:offered.eligibility.rule,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:offered.eligibility.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:offered.eligibility.rule,offered:"
 msgid "Offered"
@@ -1689,10 +1677,6 @@ msgctxt "field:offered.exclusion,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:offered.exclusion,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:offered.exclusion,name:"
 msgid "Name"
 msgstr "Nom"
@@ -1748,10 +1732,6 @@ msgstr "ID"
 msgctxt "field:offered.item.description,kind:"
 msgid "Kind"
 msgstr "Type"
-
-msgctxt "field:offered.item.description,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:offered.item.description,name:"
 msgid "Name"
@@ -1928,6 +1908,10 @@ msgstr "Famille"
 msgctxt "field:offered.option.description,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:offered.option.description,insurance_kind:"
+msgid "Insurance Kind"
+msgstr "Type d'assurance"
 
 msgctxt "field:offered.option.description,insurer:"
 msgid "Insurer"
@@ -2117,6 +2101,10 @@ msgctxt "field:offered.product,name:"
 msgid "Name"
 msgstr "Nom"
 
+msgctxt "field:offered.product,premium_dates:"
+msgid "Premium Dates"
+msgstr "Dates de calcul"
+
 msgctxt "field:offered.product,premium_rules:"
 msgid "Premium Rules"
 msgstr "Règles de Cotisation"
@@ -2256,10 +2244,6 @@ msgstr "Fréquence"
 msgctxt "field:offered.term.rule,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:offered.term.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:offered.term.rule,offered:"
 msgid "Offered"
@@ -2425,6 +2409,10 @@ msgctxt "help:offered.coverage_amount.rule,amounts:"
 msgid "Specify amounts separated by ;"
 msgstr "Spécifier les montants séparés par des ;"
 
+msgctxt "model:billing.premium.date_configuration,name:"
+msgid "Premium Date Configuration"
+msgstr "Configuration des dates de calcul des primes"
+
 msgctxt "model:billing.premium.rule,name:"
 msgid "Premium Rule"
 msgstr "Règle de Cotisation"
@@ -2562,7 +2550,7 @@ msgid "Letter Report"
 msgstr ""
 
 msgctxt "model:ir.action,name:letter_generation_wizard"
-msgid "Letter Generation"
+msgid "Impression du Courrier"
 msgstr "Impression du Courrier"
 
 msgctxt "model:ir.action,name:receive_documents_wizard"
@@ -3185,6 +3173,10 @@ msgctxt "selection:offered.option.description,family:"
 msgid "Life"
 msgstr "Prévoyance"
 
+msgctxt "selection:offered.option.description,insurance_kind:"
+msgid ""
+msgstr " "
+
 msgctxt "selection:offered.option.description,kind:"
 msgid "Insurance"
 msgstr "Assurance"
@@ -3280,6 +3272,10 @@ msgstr "À Cette Date"
 msgctxt "selection:rule_engine,extra_data_kind:"
 msgid "Extra Data"
 msgstr "Données Complémentaires"
+
+msgctxt "view:billing.premium.date_configuration:"
+msgid "Premium Date Configuration"
+msgstr "Configuration des dates de calcul des primes"
 
 msgctxt "view:billing.premium.rule.component:"
 msgid "Premium Rule Component"
@@ -3408,6 +3404,10 @@ msgstr "Descripteur de Données Complémentaires"
 msgctxt "view:extra_data:"
 msgid "Extra Data Descriptors"
 msgstr "Descripteurs de Données Complémentaires"
+
+msgctxt "view:extra_premium.kind:"
+msgid "%"
+msgstr "%"
 
 msgctxt "view:extra_premium.kind:"
 msgid "Extra Premium Kind"
